antlr4/proyectoqParser.java
// Generated from proyectoq.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class proyectoqParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PUERTA_Q=1, INI=2, SELE=3, EN=4, OP=5, TEN=6, ENTRE=7, UN=8, INV=9, MED=10, 
		QUBIT=11, INDEX=12, NEWLINE=13, WHITESPACE=14, DIGITO=15, N_INTEGER=16, 
		N_FLOAT=17, LETRA=18, ESPACIO=19, COMENTARIO_INI=20, COMENTARIO_FIN=21, 
		COMA=22, PUNTO=23, OP_SUM=24, OP_REST=25, OP_POR=26, OP_DIV=27, OP_IGUAL=28, 
		OP_MAYOR=29, OP_MENOR=30, OP_MAYOR_IGUAL=31, OP_MENOR_IGUAL=32, OP_EQUI=33, 
		OP_NEG=34, OP_DOSP=35, OP_DIF=36, OP_Y=37, OP_LOGICA=38, OP_ARITMETICA=39, 
		LLA=40, LLC=41, PRA=42, PRC=43, PCA=44, PCC=45, EOL=46, IF=47, WHILE=48, 
		VAR=49, FINVAR=50, INT=51, FLOAT=52, ELSE=53;
	public static final int
		RULE_prog = 0, RULE_expr = 1, RULE_registro_q = 2, RULE_seleccion = 3, 
		RULE_operar = 4, RULE_tensor = 5, RULE_union = 6, RULE_inversa = 7, RULE_medir = 8, 
		RULE_id = 9, RULE_array_q = 10, RULE_mas_q = 11, RULE_array = 12, RULE_matriz = 13, 
		RULE_variable = 14, RULE_variable_declar = 15, RULE_condicion = 16, RULE_sentencia = 17, 
		RULE_if_sentencia = 18, RULE_else_sentencia = 19, RULE_while_sentencia = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "expr", "registro_q", "seleccion", "operar", "tensor", "union", 
			"inversa", "medir", "id", "array_q", "mas_q", "array", "matriz", "variable", 
			"variable_declar", "condicion", "sentencia", "if_sentencia", "else_sentencia", 
			"while_sentencia"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "' '", "'/*'", "'*/'", "','", 
			"'.'", "'+'", "'-'", "'*'", "'/'", "'='", "'>'", "'<'", "'>='", "'<='", 
			"'=='", "'!'", "':'", "'!='", "'&'", null, null, "'{'", "'}'", "'('", 
			"')'", "'['", "']'", "';'", null, null, "'VAR'", "'FINVAR'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PUERTA_Q", "INI", "SELE", "EN", "OP", "TEN", "ENTRE", "UN", "INV", 
			"MED", "QUBIT", "INDEX", "NEWLINE", "WHITESPACE", "DIGITO", "N_INTEGER", 
			"N_FLOAT", "LETRA", "ESPACIO", "COMENTARIO_INI", "COMENTARIO_FIN", "COMA", 
			"PUNTO", "OP_SUM", "OP_REST", "OP_POR", "OP_DIV", "OP_IGUAL", "OP_MAYOR", 
			"OP_MENOR", "OP_MAYOR_IGUAL", "OP_MENOR_IGUAL", "OP_EQUI", "OP_NEG", 
			"OP_DOSP", "OP_DIF", "OP_Y", "OP_LOGICA", "OP_ARITMETICA", "LLA", "LLC", 
			"PRA", "PRC", "PCA", "PCC", "EOL", "IF", "WHILE", "VAR", "FINVAR", "INT", 
			"FLOAT", "ELSE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "proyectoq.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public proyectoqParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public Registro_qContext registro_q() {
			return getRuleContext(Registro_qContext.class,0);
		}
		public TerminalNode EOL() { return getToken(proyectoqParser.EOL, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoqListener ) ((proyectoqListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoqListener ) ((proyectoqListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			registro_q();
			setState(43);
			match(EOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public SeleccionContext seleccion() {
			return getRuleContext(SeleccionContext.class,0);
		}
		public OperarContext operar() {
			return getRuleContext(OperarContext.class,0);
		}
		public TensorContext tensor() {
			return getRuleContext(TensorContext.class,0);
		}
		public UnionContext union() {
			return getRuleContext(UnionContext.class,0);
		}
		public InversaContext inversa() {
			return getRuleContext(InversaContext.class,0);
		}
		public MedirContext medir() {
			return getRuleContext(MedirContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoqListener ) ((proyectoqListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoqListener ) ((proyectoqListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expr);
		try {
			setState(51);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SELE:
				enterOuterAlt(_localctx, 1);
				{
				setState(45);
				seleccion();
				}
				break;
			case OP:
				enterOuterAlt(_localctx, 2);
				{
				setState(46);
				operar();
				}
				break;
			case TEN:
				enterOuterAlt(_localctx, 3);
				{
				setState(47);
				tensor();
				}
				break;
			case UN:
				enterOuterAlt(_localctx, 4);
				{
				setState(48);
				union();
				}
				break;
			case INV:
				enterOuterAlt(_localctx, 5);
				{
				setState(49);
				inversa();
				}
				break;
			case MED:
				enterOuterAlt(_localctx, 6);
				{
				setState(50);
				medir();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Registro_qContext extends ParserRuleContext {
		public TerminalNode INI() { return getToken(proyectoqParser.INI, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public Array_qContext array_q() {
			return getRuleContext(Array_qContext.class,0);
		}
		public TerminalNode OP_Y() { return getToken(proyectoqParser.OP_Y, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Registro_qContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_registro_q; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoqListener ) ((proyectoqListener)listener).enterRegistro_q(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoqListener ) ((proyectoqListener)listener).exitRegistro_q(this);
		}
	}

	public final Registro_qContext registro_q() throws RecognitionException {
		Registro_qContext _localctx = new Registro_qContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_registro_q);
		try {
			setState(71);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(53);
				match(INI);
				setState(54);
				id();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				match(INI);
				setState(56);
				id();
				setState(57);
				array_q();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(59);
				match(INI);
				setState(60);
				id();
				setState(61);
				match(OP_Y);
				setState(62);
				expr();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(64);
				match(INI);
				setState(65);
				id();
				setState(66);
				array_q();
				setState(67);
				match(OP_Y);
				setState(68);
				expr();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(70);
				match(INI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SeleccionContext extends ParserRuleContext {
		public TerminalNode SELE() { return getToken(proyectoqParser.SELE, 0); }
		public TerminalNode PRA() { return getToken(proyectoqParser.PRA, 0); }
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public TerminalNode PRC() { return getToken(proyectoqParser.PRC, 0); }
		public TerminalNode OP_IGUAL() { return getToken(proyectoqParser.OP_IGUAL, 0); }
		public TerminalNode PCA() { return getToken(proyectoqParser.PCA, 0); }
		public List<TerminalNode> INDEX() { return getTokens(proyectoqParser.INDEX); }
		public TerminalNode INDEX(int i) {
			return getToken(proyectoqParser.INDEX, i);
		}
		public TerminalNode OP_DOSP() { return getToken(proyectoqParser.OP_DOSP, 0); }
		public TerminalNode PCC() { return getToken(proyectoqParser.PCC, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public SeleccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seleccion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoqListener ) ((proyectoqListener)listener).enterSeleccion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoqListener ) ((proyectoqListener)listener).exitSeleccion(this);
		}
	}

	public final SeleccionContext seleccion() throws RecognitionException {
		SeleccionContext _localctx = new SeleccionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_seleccion);
		try {
			setState(98);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				match(SELE);
				setState(74);
				match(PRA);
				setState(75);
				id();
				setState(76);
				match(PRC);
				setState(77);
				match(OP_IGUAL);
				setState(78);
				id();
				setState(79);
				match(PCA);
				setState(80);
				match(INDEX);
				setState(81);
				match(OP_DOSP);
				setState(82);
				match(INDEX);
				setState(83);
				match(PCC);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				match(SELE);
				setState(86);
				match(PRA);
				setState(87);
				id();
				setState(88);
				match(PRC);
				setState(89);
				match(OP_IGUAL);
				setState(90);
				id();
				setState(91);
				match(PCA);
				setState(92);
				match(INDEX);
				setState(93);
				match(OP_DOSP);
				setState(94);
				match(INDEX);
				setState(95);
				match(PCC);
				setState(96);
				expr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperarContext extends ParserRuleContext {
		public TerminalNode OP() { return getToken(proyectoqParser.OP, 0); }
		public TerminalNode PUERTA_Q() { return getToken(proyectoqParser.PUERTA_Q, 0); }
		public TerminalNode PRA() { return getToken(proyectoqParser.PRA, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode PRC() { return getToken(proyectoqParser.PRC, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public OperarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoqListener ) ((proyectoqListener)listener).enterOperar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoqListener ) ((proyectoqListener)listener).exitOperar(this);
		}
	}

	public final OperarContext operar() throws RecognitionException {
		OperarContext _localctx = new OperarContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_operar);
		try {
			setState(113);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				match(OP);
				{
				setState(101);
				match(PUERTA_Q);
				}
				{
				setState(102);
				match(PRA);
				}
				{
				setState(103);
				id();
				}
				{
				setState(104);
				match(PRC);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(106);
				match(OP);
				{
				setState(107);
				match(PUERTA_Q);
				}
				{
				setState(108);
				match(PRA);
				}
				{
				setState(109);
				id();
				}
				{
				setState(110);
				match(PRC);
				}
				{
				setState(111);
				expr();
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TensorContext extends ParserRuleContext {
		public TerminalNode TEN() { return getToken(proyectoqParser.TEN, 0); }
		public TerminalNode ENTRE() { return getToken(proyectoqParser.ENTRE, 0); }
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public TerminalNode PRA() { return getToken(proyectoqParser.PRA, 0); }
		public TerminalNode COMA() { return getToken(proyectoqParser.COMA, 0); }
		public TerminalNode PRC() { return getToken(proyectoqParser.PRC, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TensorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tensor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoqListener ) ((proyectoqListener)listener).enterTensor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoqListener ) ((proyectoqListener)listener).exitTensor(this);
		}
	}

	public final TensorContext tensor() throws RecognitionException {
		TensorContext _localctx = new TensorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tensor);
		try {
			setState(134);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				match(TEN);
				{
				setState(116);
				id();
				}
				setState(117);
				match(ENTRE);
				{
				setState(118);
				match(PRA);
				}
				{
				setState(119);
				id();
				}
				{
				setState(120);
				match(COMA);
				}
				{
				setState(121);
				id();
				}
				{
				setState(122);
				match(PRC);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				match(TEN);
				{
				setState(125);
				id();
				}
				setState(126);
				match(ENTRE);
				{
				setState(127);
				match(PRA);
				}
				{
				setState(128);
				id();
				}
				{
				setState(129);
				match(COMA);
				}
				{
				setState(130);
				id();
				}
				{
				setState(131);
				match(PRC);
				}
				{
				setState(132);
				expr();
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnionContext extends ParserRuleContext {
		public TerminalNode UN() { return getToken(proyectoqParser.UN, 0); }
		public TerminalNode ENTRE() { return getToken(proyectoqParser.ENTRE, 0); }
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public TerminalNode PRA() { return getToken(proyectoqParser.PRA, 0); }
		public TerminalNode COMA() { return getToken(proyectoqParser.COMA, 0); }
		public TerminalNode PRC() { return getToken(proyectoqParser.PRC, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public UnionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_union; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoqListener ) ((proyectoqListener)listener).enterUnion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoqListener ) ((proyectoqListener)listener).exitUnion(this);
		}
	}

	public final UnionContext union() throws RecognitionException {
		UnionContext _localctx = new UnionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_union);
		try {
			setState(155);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(136);
				match(UN);
				{
				setState(137);
				id();
				}
				setState(138);
				match(ENTRE);
				{
				setState(139);
				match(PRA);
				}
				{
				setState(140);
				id();
				}
				{
				setState(141);
				match(COMA);
				}
				{
				setState(142);
				id();
				}
				{
				setState(143);
				match(PRC);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(145);
				match(UN);
				{
				setState(146);
				id();
				}
				setState(147);
				match(ENTRE);
				{
				setState(148);
				match(PRA);
				}
				{
				setState(149);
				id();
				}
				{
				setState(150);
				match(COMA);
				}
				{
				setState(151);
				id();
				}
				{
				setState(152);
				match(PRC);
				}
				{
				setState(153);
				expr();
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InversaContext extends ParserRuleContext {
		public TerminalNode INV() { return getToken(proyectoqParser.INV, 0); }
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public TerminalNode PRA() { return getToken(proyectoqParser.PRA, 0); }
		public TerminalNode PRC() { return getToken(proyectoqParser.PRC, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public InversaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inversa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoqListener ) ((proyectoqListener)listener).enterInversa(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoqListener ) ((proyectoqListener)listener).exitInversa(this);
		}
	}

	public final InversaContext inversa() throws RecognitionException {
		InversaContext _localctx = new InversaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_inversa);
		try {
			setState(170);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(157);
				match(INV);
				{
				setState(158);
				id();
				}
				{
				setState(159);
				match(PRA);
				}
				{
				setState(160);
				id();
				}
				{
				setState(161);
				match(PRC);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(163);
				match(INV);
				{
				setState(164);
				id();
				}
				{
				setState(165);
				match(PRA);
				}
				{
				setState(166);
				id();
				}
				{
				setState(167);
				match(PRC);
				}
				{
				setState(168);
				expr();
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MedirContext extends ParserRuleContext {
		public TerminalNode MED() { return getToken(proyectoqParser.MED, 0); }
		public TerminalNode EN() { return getToken(proyectoqParser.EN, 0); }
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public MedirContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_medir; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoqListener ) ((proyectoqListener)listener).enterMedir(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoqListener ) ((proyectoqListener)listener).exitMedir(this);
		}
	}

	public final MedirContext medir() throws RecognitionException {
		MedirContext _localctx = new MedirContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_medir);
		try {
			setState(183);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(172);
				match(MED);
				{
				setState(173);
				id();
				}
				setState(174);
				match(EN);
				{
				setState(175);
				id();
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(177);
				match(MED);
				{
				setState(178);
				id();
				}
				setState(179);
				match(EN);
				{
				setState(180);
				id();
				}
				{
				setState(181);
				expr();
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdContext extends ParserRuleContext {
		public List<TerminalNode> LETRA() { return getTokens(proyectoqParser.LETRA); }
		public TerminalNode LETRA(int i) {
			return getToken(proyectoqParser.LETRA, i);
		}
		public List<TerminalNode> DIGITO() { return getTokens(proyectoqParser.DIGITO); }
		public TerminalNode DIGITO(int i) {
			return getToken(proyectoqParser.DIGITO, i);
		}
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoqListener ) ((proyectoqListener)listener).enterId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoqListener ) ((proyectoqListener)listener).exitId(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_id);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(185);
				match(LETRA);
				}
				}
				setState(188); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==LETRA );
			setState(193);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DIGITO) {
				{
				{
				setState(190);
				match(DIGITO);
				}
				}
				setState(195);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Array_qContext extends ParserRuleContext {
		public TerminalNode PCA() { return getToken(proyectoqParser.PCA, 0); }
		public TerminalNode QUBIT() { return getToken(proyectoqParser.QUBIT, 0); }
		public TerminalNode PCC() { return getToken(proyectoqParser.PCC, 0); }
		public TerminalNode COMA() { return getToken(proyectoqParser.COMA, 0); }
		public Mas_qContext mas_q() {
			return getRuleContext(Mas_qContext.class,0);
		}
		public Array_qContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array_q; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoqListener ) ((proyectoqListener)listener).enterArray_q(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoqListener ) ((proyectoqListener)listener).exitArray_q(this);
		}
	}

	public final Array_qContext array_q() throws RecognitionException {
		Array_qContext _localctx = new Array_qContext(_ctx, getState());
